unpackaged/main/default/objects/Case/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <label>Action Taken</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Question Answered</fullName>
            </value>
            <value>
                <fullName>Seek Clarification</fullName>
            </value>
            <value>
                <fullName>Appeasement: Comp Dollars</fullName>
            </value>
            <value>
                <fullName>Appeasement: Room+</fullName>
            </value>
            <value>
                <fullName>Escalate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Compassionate Response</fullName>
            </value>
            <value>
                <fullName>Appeasement: Room</fullName>
            </value>
            <value>
                <fullName>NCN—No Contact Necessary</fullName>
            </value>
            <value>
                <fullName>Folio Sent</fullName>
            </value>
            <value>
                <fullName>Appeasement Offered</fullName>
            </value>
            <value>
                <fullName>Points/Visit Added</fullName>
            </value>
            <value>
                <fullName>Refunded Item/Order</fullName>
            </value>
            <value>
                <fullName>Appeasement Credit</fullName>
            </value>
            <value>
                <fullName>Re-Ordered</fullName>
            </value>
            <value>
                <fullName>Sent Tracking</fullName>
            </value>
            <value>
                <fullName>Cancelled Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>