unpackaged/main/default/objects/Case/fields/Alert_close_time__c.field-meta.xml
<CustomField>
    <fullName>Alert_close_time__c</fullName>
    <description>Medallia Alert close time / case close</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Alert close time</label>
    <type>DateTime</type>
</CustomField>