unpackaged/main/default/objects/Case/fields/Case_Closed_By__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Closed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>