unpackaged/main/default/objects/Case/fields/Case_closed_by_name__c.field-meta.xml
<CustomField>
    <fullName>Case_closed_by_name__c</fullName>
    <formula>IF(Alert_closed_by__c=null,  
Case_Closed_By__r.FirstName +&#39; &#39;+ Case_Closed_By__r.LastName +&#39; (&#39;+ Case_Closed_By__r.Email +&#39;)&#39;
,Alert_closed_by__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case closed by name</label>
    <type>Text</type>
</CustomField>