unpackaged/main/default/objects/Case/fields/Case_Duration__c.field-meta.xml
<CustomField>
    <fullName>Case_Duration__c</fullName>
    <description>This field represent Case age.</description>
    <formula>IF(
    ISPICKVAL( Status , &quot;Closed&quot;),
    TEXT((ClosedDate- CreatedDate)*86400) &amp; &quot; seconds&quot; ,&quot;&quot;
    
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Duration</label>
    <type>Text</type>
</CustomField>