unpackaged/main/default/objects/Case/fields/Case_handled_in_SFDC_flag__c.field-meta.xml
<CustomField>
    <fullName>Case_handled_in_SFDC_flag__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Case handled in SFDC flag</label>
    <type>Checkbox</type>
</CustomField>