unpackaged/main/default/objects/Case/fields/Casino_Account_number__c.field-meta.xml
<CustomField>
    <fullName>Casino_Account_number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Casino Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>