unpackaged/main/default/objects/Case/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <formula>IF(Alert_closed_by__c=null, ClosedDate, Alert_close_time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date/Time Closed</label>
    <type>DateTime</type>
</CustomField>