unpackaged/main/default/objects/Case/fields/Concerned_Dept__c.field-meta.xml
<CustomField>
    <fullName>Concerned_Dept__c</fullName>
    <label>Concerned Dept</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Care Leadership (Direct)</fullName>
            </value>
            <value>
                <fullName>Customer Care Leadership (All)</fullName>
            </value>
            <value>
                <fullName>Property Leadership</fullName>
            </value>
            <value>
                <fullName>F&amp;B Leadership</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Casino: Slot</fullName>
            </value>
            <value>
                <fullName>Casino: Table Games</fullName>
            </value>
            <value>
                <fullName>Casino: Poker</fullName>
            </value>
            <value>
                <fullName>Casino: Cashier</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Entertainment/Box Office</fullName>
            </value>
            <value>
                <fullName>Banquet or Catering</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Night Club</fullName>
            </value>
            <value>
                <fullName>Corporate Leadership (Digital/Marketing)</fullName>
            </value>
            <value>
                <fullName>Corporate Leadership (Direct)</fullName>
            </value>
            <value>
                <fullName>Corporate Leadership (All)</fullName>
            </value>
            <value>
                <fullName>Hotel/Recreation/Spa/Housekeeping/EVS Leadership</fullName>
            </value>
            <value>
                <fullName>Casino: Player Development (use for all Elite/X-Card)</fullName>
            </value>
            <value>
                <fullName>Casino: Players Clubs</fullName>
            </value>
            <value>
                <fullName>Casino Beverage</fullName>
            </value>
            <value>
                <fullName>Casino Public Space</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>