unpackaged/main/default/objects/Case/fields/Contact_Method_Afternoon_Noon_4pm_EST__c.field-meta.xml
<CustomField>
    <fullName>Contact_Method_Afternoon_Noon_4pm_EST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Afternoon (Noon - 4pm EST)</label>
    <type>Checkbox</type>
</CustomField>