unpackaged/main/default/objects/Case/fields/Contact_Method_Evening_4pm_9pm_EST__c.field-meta.xml
<CustomField>
    <fullName>Contact_Method_Evening_4pm_9pm_EST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evening (4pm - 9pm EST)</label>
    <type>Checkbox</type>
</CustomField>