unpackaged/main/default/objects/Case/fields/Contact_Method_Immediately__c.field-meta.xml
<CustomField>
    <fullName>Contact_Method_Immediately__c</fullName>
    <defaultValue>false</defaultValue>
    <description>using it in Web to forms</description>
    <label>Immediately</label>
    <type>Checkbox</type>
</CustomField>