unpackaged/main/default/objects/Case/fields/Contact_Method_Morning_8am_Noon_EST__c.field-meta.xml
<CustomField>
    <fullName>Contact_Method_Morning_8am_Noon_EST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Morning (8am-Noon EST)</label>
    <type>Checkbox</type>
</CustomField>