unpackaged/main/default/objects/Case/fields/Crisis_Details__c.field-meta.xml
<CustomField>
    <fullName>Crisis_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crisis Details</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Crisis_Details__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Crisis_Details__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>