unpackaged/main/default/objects/Case/fields/Crisis_Type__c.field-meta.xml
<CustomField>
    <fullName>Crisis_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Crisis Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>