unpackaged/main/default/objects/Case/fields/Global_Tier__c.field-meta.xml
<CustomField>
    <fullName>Global_Tier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Global Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>