unpackaged/main/default/objects/Case/fields/HOST__c.field-meta.xml
<CustomField>
    <fullName>HOST__c</fullName>
    <description>Host from Medallia</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Host</label>
    <length>255</length>
    <type>Text</type>
</CustomField>