unpackaged/main/default/objects/Case/fields/Interaction_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interaction Date Time</label>
    <type>DateTime</type>
</CustomField>