unpackaged/main/default/objects/Case/fields/Interaction_Request__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Request__c</fullName>
    <label>Interaction Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I Prefer Call</fullName>
            </value>
            <value>
                <fullName>I Prefer Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>