unpackaged/main/default/objects/Case/fields/Is_Executive_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Is_Executive_Escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Executive Escalation</label>
    <type>Checkbox</type>
</CustomField>