unpackaged/main/default/objects/Case/fields/Is_Junk_Case__c.field-meta.xml
<CustomField>
    <fullName>Is_Junk_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Junk Case</label>
    <type>Checkbox</type>
</CustomField>