unpackaged/main/default/objects/Case/fields/Is_related_to_Crisis__c.field-meta.xml
<CustomField>
    <fullName>Is_related_to_Crisis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is related to Crisis</label>
    <type>Checkbox</type>
</CustomField>