unpackaged/main/default/objects/Case/fields/Location_Number__c.field-meta.xml
<CustomField>
    <fullName>Location_Number__c</fullName>
    <formula>Location__r.Location_Number__c</formula>
    <label>Location Number</label>
    <type>Text</type>
</CustomField>