unpackaged/main/default/objects/Case/fields/Location_Text__c.field-meta.xml
<CustomField>
    <fullName>Location_Text__c</fullName>
    <description>To store text value from internal web form</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Location Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>