unpackaged/main/default/objects/Case/fields/Loyalty_Number__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Loyalty Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>