unpackaged/main/default/objects/Case/fields/Medallia_Alert_Status__c.field-meta.xml
<CustomField>
    <fullName>Medallia_Alert_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Medallia Alert Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>