unpackaged/main/default/objects/Case/fields/Medallia_Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>Medallia_Alert_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Medallia Alert Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>