unpackaged/main/default/objects/Case/fields/MSD_Case_Closed_By_User_Name__c.field-meta.xml
<CustomField>
    <fullName>MSD_Case_Closed_By_User_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MSD Case Closed By User Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>