unpackaged/main/default/objects/Case/fields/MSD_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>MSD_Case_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MSD Case Number</label>
    <length>225</length>
    <type>Text</type>
</CustomField>