unpackaged/main/default/objects/Case/fields/MSD_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>MSD_Created_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MSD Created Date</label>
    <type>Date</type>
</CustomField>