unpackaged/main/default/objects/Case/fields/MSD_External_ID__c.field-meta.xml
<CustomField>
    <fullName>MSD_External_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>MSD External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>