unpackaged/main/default/objects/Case/fields/MSD_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>MSD_Owner_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MSD Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>