unpackaged/main/default/objects/Case/fields/Name_of_property_visited__c.field-meta.xml
<CustomField>
    <fullName>Name_of_property_visited__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Web Property Visited</label>
    <length>255</length>
    <type>Text</type>
</CustomField>