unpackaged/main/default/objects/Case/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>