unpackaged/main/default/objects/Case/fields/Overall_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Overall_Satisfaction__c</fullName>
    <label>Overall Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Not Good</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>