unpackaged/main/default/objects/Case/fields/Pending_Status_TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>Pending_Status_TimeStamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pending Status TimeStamp</label>
    <type>DateTime</type>
</CustomField>