unpackaged/main/default/objects/Case/fields/Prefer_the_Same_Agent__c.field-meta.xml
<CustomField>
    <fullName>Prefer_the_Same_Agent__c</fullName>
    <label>Prefer the Same Agent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>