unpackaged/main/default/objects/Case/fields/Preffered_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Preffered_Contact_Method__c</fullName>
    <label>Preffered Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>No Contact Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>