unpackaged/main/default/objects/Case/fields/Preffered_Contact_Time__c.field-meta.xml
<CustomField>
    <fullName>Preffered_Contact_Time__c</fullName>
    <label>Preffered Contact Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediately</fullName>
            </value>
            <value>
                <fullName>Morning (8am-Noon EST)</fullName>
            </value>
            <value>
                <fullName>Afternoon (Noon - 4pm EST)</fullName>
            </value>
            <value>
                <fullName>Evening (4pm - 9pm EST)</fullName>
            </value>
            <value>
                <fullName>ASAP</fullName>
            </value>
            <value>
                <fullName>NOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>