unpackaged/main/default/objects/Case/fields/Problem_Area__c.field-meta.xml
<CustomField>
    <fullName>Problem_Area__c</fullName>
    <label>Problem Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FH: Attitude</fullName>
            </value>
            <value>
                <fullName>FH: Appearance</fullName>
            </value>
            <value>
                <fullName>FH: Accuracy</fullName>
            </value>
            <value>
                <fullName>FH: Attentiveness</fullName>
            </value>
            <value>
                <fullName>WT: Longer than expected (speed of service)</fullName>
            </value>
            <value>
                <fullName>WT: Longer than expected (line)</fullName>
            </value>
            <value>
                <fullName>QT: Value</fullName>
            </value>
            <value>
                <fullName>QT: Value (Marketing, SWC, Offer/Promo)</fullName>
            </value>
            <value>
                <fullName>QT: Variety</fullName>
            </value>
            <value>
                <fullName>QT: Cleanliness</fullName>
            </value>
            <value>
                <fullName>QT: Smell/Smoke/Air Quality/Temp/Volume</fullName>
            </value>
            <value>
                <fullName>QT: Malfunctioning or Broken or Missing</fullName>
            </value>
            <value>
                <fullName>QT: Security</fullName>
            </value>
            <value>
                <fullName>No Text</fullName>
            </value>
            <value>
                <fullName>QT: Taste/Temperature</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Reservations/Cancellations/Rates</fullName>
            </value>
            <value>
                <fullName>Billing Disputes</fullName>
            </value>
            <value>
                <fullName>Folio Requests</fullName>
            </value>
            <value>
                <fullName>Sales Inquiries—Groups</fullName>
            </value>
            <value>
                <fullName>General Information</fullName>
            </value>
            <value>
                <fullName>TA Commission</fullName>
            </value>
            <value>
                <fullName>Lost &amp; Found</fullName>
            </value>
            <value>
                <fullName>Guest Complaint</fullName>
            </value>
            <value>
                <fullName>Donation Requests</fullName>
            </value>
            <value>
                <fullName>Collaboration/Advertising Requests</fullName>
            </value>
            <value>
                <fullName>Vendor Requests</fullName>
            </value>
            <value>
                <fullName>Team Member Inquiries</fullName>
            </value>
            <value>
                <fullName>Employment Inquiries</fullName>
            </value>
            <value>
                <fullName>General Inquiries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>