unpackaged/main/default/objects/Case/fields/Provide_Feedback_on_Agent_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Provide_Feedback_on_Agent_Interaction__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Provide Feedback on Agent Interaction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>