unpackaged/main/default/objects/Case/fields/Reason_Text__c.field-meta.xml
<CustomField>
    <fullName>Reason_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>