unpackaged/main/default/objects/Case/fields/Record_Type_Seminole__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Seminole__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Type - Seminole</label>
    <length>255</length>
    <type>Text</type>
</CustomField>