unpackaged/main/default/objects/Case/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Added Credits</fullName>
            </value>
            <value>
                <fullName>Assigned Badge</fullName>
            </value>
            <value>
                <fullName>Appeasement Credit</fullName>
            </value>
            <value>
                <fullName>Denied  Lack of Evidence</fullName>
            </value>
            <value>
                <fullName>Denied  Other</fullName>
            </value>
            <value>
                <fullName>Pins</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sent Tracking</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>Cancelled Order</fullName>
            </value>
            <value>
                <fullName>Re Shipped Package</fullName>
            </value>
            <value>
                <fullName>No Response from Guest</fullName>
            </value>
            <value>
                <fullName>Compasionate Response</fullName>
            </value>
            <value>
                <fullName>Questions Answered</fullName>
            </value>
            <value>
                <fullName>Seek Clarification</fullName>
            </value>
            <value>
                <fullName>Appeasement Comp Dollars</fullName>
            </value>
            <value>
                <fullName>Appeasement Room</fullName>
            </value>
            <value>
                <fullName>Appeasement Room +</fullName>
            </value>
            <value>
                <fullName>Escalate</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Appeasement Credit (Value field to populate and required)</fullName>
                <isActive>false</isActive>
                <label>Appeasement Credit (Value field to populate and required)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>