unpackaged/main/default/objects/Case/fields/Resolution_Text__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resolution Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>