unpackaged/main/default/objects/Case/fields/Responsedate__c.field-meta.xml
<CustomField>
    <fullName>Responsedate__c</fullName>
    <description>Medallia Response Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Response Date</label>
    <type>Date</type>
</CustomField>