unpackaged/main/default/objects/Case/fields/Rewards_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Rewards_Member_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rewards Member ID#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>