unpackaged/main/default/objects/Case/fields/Seminole_Wild_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Seminole_Wild_Card_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seminole Wild Card Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>