unpackaged/main/default/objects/Case/fields/Status_Updated_Time__c.field-meta.xml
<CustomField>
    <fullName>Status_Updated_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Updated Time</label>
    <type>DateTime</type>
</CustomField>