unpackaged/main/default/objects/Case/fields/Statusf__c.field-meta.xml
<CustomField>
    <fullName>Statusf__c</fullName>
    <formula>IMAGE(CASE( Status ,&#39;New&#39;,&#39;/resource/status_icons/status-new.png&#39;,&#39;Open&#39;,&#39;/resource/status_icons/status-open.png&#39;,&#39;Pending&#39;,&#39;/resource/status_icons/status-pending.png&#39;,&#39;Escalated&#39;, &#39;/resource/status_icons/status-escalated.png&#39;,&#39;Closed&#39;,&#39;/resource/status_icons/status-closed.png&#39;,&#39;&#39;),&#39;&#39;,22,22) + &#39; &#39; + Text(Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>