unpackaged/main/default/objects/Case/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FH: Attitude</fullName>
            </value>
            <value>
                <fullName>FH: Appearance</fullName>
            </value>
            <value>
                <fullName>FH: Accuracy</fullName>
            </value>
            <value>
                <fullName>FH: Attentiveness</fullName>
            </value>
            <value>
                <fullName>WT: Longer than expected (speed of Service)</fullName>
            </value>
            <value>
                <fullName>WT: Longer than expected (line)</fullName>
            </value>
            <value>
                <fullName>QT: Value</fullName>
            </value>
            <value>
                <fullName>QT: Value (Marketing, SWC, Offer/Promo)</fullName>
            </value>
            <value>
                <fullName>QT: Variety</fullName>
            </value>
            <value>
                <fullName>QT: Taste/Temperatue</fullName>
            </value>
            <value>
                <fullName>QT: Cleanliness</fullName>
            </value>
            <value>
                <fullName>QT: Smell/Smoke/Air Quality/Temp/Volume</fullName>
            </value>
            <value>
                <fullName>QT: Malfunctioning or Broken or Missing</fullName>
            </value>
            <value>
                <fullName>QT: Security</fullName>
            </value>
            <value>
                <fullName>No Text</fullName>
            </value>
            <value>
                <fullName>Lost Package</fullName>
            </value>
            <value>
                <fullName>Broken/Wrong/Missing Item</fullName>
            </value>
            <value>
                <fullName>Gift Card</fullName>
            </value>
            <value>
                <fullName>Missing or Wrong Credits/Badges</fullName>
            </value>
            <value>
                <fullName>Expire Credits/Badges</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>